[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssi-scanpy-tools"
version = "0.1.0"
description = "A package for single-cell RNA-seq analysis using Scanpy."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "scanpy",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly"
]
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

docs = [
    "pdoc"
]

[tool.setuptools]
packages = ["scanpytools"]

[tool.black]
line-length = 88
