[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssi-scanpy-tools"
version = "0.1.0"
description = "A package for single-cell RNA-seq analysis using Scanpy."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "scanpy",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "torch",
    "google-generativeai",
    "openai",
    "huggingface-hub",
    "python-dotenv"
]
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

doc = [
    "pdoc"  # Using pdoc instead of pdoc3
]

ai = [
    "google-generativeai",
    "openai", 
    "huggingface-hub",
    "torch"
]

[tool.setuptools]
packages = ["scanpytools"]

[tool.black]
line-length = 88
